Application now prints the cardinality